LUCENE-1857: Missed one valueOf conversion
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@820795 13f79535-47bb-0310-9956-ffa450edef68